# wikigraph

./: Cargo.toml  README.md
data/: test_input1.txt  test_output1.txt
src/: article.rs  config.rs  lib.rs  main.rs  url.rs
src/scraper/: mod.rs
